# robot_controller

./: .gitignore  README.md  pyproject.toml
qml/: App.qml  main.qml
qml/Components/: qmldir
qml/Components/headers/: Tag.qml  Title.qml
qml/Components/inputs/: SpinInput.qml  TextInputBar.qml
qml/Components/listPosition/: ListPosition.qml  PositionItem.qml
qml/Components/popups/: PositionPopup.qml
qml/components/atoms/: CommonBtn.qml  IconBtn.qml  Tag.qml
qml/components/molecules/: EditPositionPopup.qml  PoseInput.qml  PositionItem.qml  PositionPopup.qml
qml/components/organisms/: ListPosition.qml  Sidebar.qml
qml/components/themes/: colors.qml
qml/pages/: PositionPage.qml  PositionsPage.qml  qmldir
source/: pyvenv.cfg
sql/migrations/: 001_create_pose_table.sql
sql/poses/: delete_all.sql  insert_pose.sql  select_all.sql  update_pose.sql
src/: main.py  run_migration.py
src/controllers/: main_controllers.py  position_controller.py  robot_controller.py
src/db/: db_manager.py
src/db/sql/migrations/: 001_create_pose_table.sql  002_add_name_column.sql  003_remove_robot_ip.sql
src/db/sql/poses/: delete_pose.sql  insert_pose.sql
src/model/: position_model.py
src/repository/: position_repository.py
src/services/: robot_service.py
src/utils/: robot_singleton.py
