[project]
name = "robotine-ui"
version = "0.1.0"
description = "Interface gráfica QtQuick/QML para controle do robô Fairino"
requires-python = ">=3.10"

dependencies = [
    "PySide6>=6.7.0",
    "python-dotenv",
    "sqlite-utils",
    "requests",
    "numpy",
    "cython",
    "setuptools>=61.0",
    "wheel"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.pyside6-project]
files = [
    "main.py",
    "ui/main.qml",
    "ui/components/",
    "controller/",
    "model/",
    "services/",
    "utils/",
    "fairino/"
]
